<resources>
    <string name="app_name">Notification Scheduler</string>
    <string name="job_notification_title">Job Service</string>
    <string name="job_notification_text">Your Job is running!</string>
    <string name="network_type_required">Network Type Required:</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="job_scheduled_notice">Job Scheduled. Job will run when constrains are met.</string>
    <string name="job_cancelled_notice">Job cancelled</string>
    <string name="requires">Requires:</string>
    <string name="idle">Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline:</string>
    <string name="not_set">Not Set</string>
    <string name="please_set_constraint_notice">Please set at least one constraint.</string>
</resources>